# comm_max

run/: communication_optimization.mmd  std_move.mmd  summary.md  zero_copy.md
run/plot/: compare.ipynb  latency.ipynb  log1.txt  log2.txt
src/bringup_launch/: CMakeLists.txt  package.xml
src/bringup_launch/launch/: double_buffer.launch.py  intra_process.launch.py  roudi_with_nodes.launch.py
src/bringup_launch/run/: data_capture.mmd  double_buffer.mmd  run.md  tick_and_dirty.mmd  双缓冲区职责分离流程.mmd
src/buffer_lib/double_buffer_lib/: CMakeLists.txt  package.xml  run.md
src/buffer_lib/double_buffer_lib/include/double_buffer_lib/: double_buffer.hpp
src/buffer_lib/double_buffer_lib/src/: double_buffer.cpp
src/buffer_lib/ring_buffer_lib/: CMakeLists.txt  package.xml  run.md
src/buffer_lib/ring_buffer_lib/include/ring_buffer_lib/: ring_buffer.hpp
src/buffer_lib/ringbuffer_lib/: CMakeLists.txt  run.md
src/double_buffer/consumer_with_dub/: CMakeLists.txt  package.xml
src/double_buffer/consumer_with_dub/include/consumer_with_dub/: consumer_component.hpp
src/double_buffer/consumer_with_dub/run/: run.md
src/double_buffer/consumer_with_dub/src/: consumer_component.cpp
src/double_buffer/producer_with_dub/: CMakeLists.txt  package.xml
src/double_buffer/producer_with_dub/include/producer_with_dub/: producer_component.hpp
src/double_buffer/producer_with_dub/src/: producer_component.cpp
src/iceoryx/: cyclonedds.xml  iox_config.toml
src/iceoryx/run/: how_to_run.md  how_to_use.md  loaned_messages.md  run.md
src/intra_process/intra_demo/: CMakeLists.txt  package.xml
src/intra_process/intra_demo/run/: ringbuffer_flow.mmd  run.md
src/intra_process/intra_demo/src/: main.cpp
src/intra_process/pub_demo/: CMakeLists.txt  package.xml  run.md
src/intra_process/pub_demo/src/: publisher_node.cpp
src/intra_process/sub_demo/: CMakeLists.txt  package.xml  run.md
src/intra_process/sub_demo/src/: subscriber_node.cpp
src/pointer/sharedptr_demo/: CMakeLists.txt  package.xml  run.md
src/pointer/sharedptr_demo/run/: data_process_flow.mmd
src/pointer/sharedptr_demo/src/: main.cpp
src/pub_and_sub/camera_pub_pkg/: CMakeLists.txt  package.xml
src/pub_and_sub/camera_pub_pkg/src/: camera_pub.cpp  camera_pub_with_stamp.cpp
src/pub_and_sub/image_saver_pkg/: CMakeLists.txt  package.xml
src/pub_and_sub/image_saver_pkg/include/image_saver_pkg/: perf_monitor.hpp
src/pub_and_sub/image_saver_pkg/src/: image_saver.cpp  image_sub_with_stamp.cpp
src/queue/condition_variable_demo/: CMakeLists.txt  package.xml  run.md
src/queue/condition_variable_demo/src/: main.cpp
src/queue/lock_free_demo/: CMakeLists.txt  package.xml  run.md
src/queue/lock_free_demo/run/: lockfree_queue_flow.mmd
src/queue/lock_free_demo/src/: main.cpp
src/queue/multiqueue_demo/: CMakeLists.txt  package.xml  run.md
src/queue/multiqueue_demo/src/: main.cpp  multi_sub.cpp
src/ring_buffer/ringbuffer_timer/: CMakeLists.txt  package.xml
src/ring_buffer/ringbuffer_timer/include/ringbuffer_timer/: consumer_node.hpp  producer_node.hpp
src/ring_buffer/ringbuffer_timer/launch/: main_exec.launch.py
src/ring_buffer/ringbuffer_timer/run/: run.md
src/ring_buffer/ringbuffer_timer/src/: consumer_node.cpp  main.cpp  producer_node.cpp
src/ring_buffer/solo/consumer_demo/: CMakeLists.txt  package.xml
src/ring_buffer/solo/consumer_demo/include/consumer_demo/: consumer_node.hpp
src/ring_buffer/solo/producer_demo/: CMakeLists.txt  package.xml
src/ring_buffer/solo/producer_demo/include/producer_demo/: producer_node.hpp
src/ring_buffer/solo/producer_demo/run/: run.md
src/ring_buffer/solo/producer_demo/src/: producer_node.cpp
src/ring_buffer/srv_trigger/consumer_srv_demo/: CMakeLists.txt  package.xml
src/ring_buffer/srv_trigger/consumer_srv_demo/include/consumer_srv_demo/: consumer_node.hpp
src/ring_buffer/srv_trigger/consumer_srv_demo/run/: run.md
src/ring_buffer/srv_trigger/producer_srv_demo/: CMakeLists.txt  package.xml
src/ring_buffer/srv_trigger/producer_srv_demo/include/producer_srv_demo/: producer_node.hpp
src/ring_buffer/srv_trigger/producer_srv_demo/run/: run.md
src/ring_buffer/sub_and_snapshot/launch/: snapshot.launch.py
src/ring_buffer/sub_and_snapshot/run/: run.md
src/ringbuffer/consumer_demo/include/consumer_demo/: consumer_node.hpp
src/ringbuffer/consumer_demo/run/: run.md
src/ringbuffer/consumer_demo/src/: consumer_node.cpp
src/ringbuffer/consumer_srv_demo/: package.xml
src/ringbuffer/consumer_srv_demo/src/: consumer_node.cpp
src/ringbuffer/prod_and_coms/: CMakeLists.txt  package.xml
src/ringbuffer/prod_and_coms/include/prod_and_coms/: consumer_node.hpp
src/ringbuffer/prod_and_coms/run/: run.md
src/ringbuffer/prod_and_coms/src/: main.cpp  producer_node.cpp
src/ringbuffer/producer_demo/: package.xml
src/ringbuffer/producer_demo/include/producer_demo/: producer_node.hpp
src/ringbuffer/ringbuffer_demo/: CMakeLists.txt  package.xml  run.md
src/ringbuffer/ringbuffer_demo/src/: main.cpp
src/ringbuffer/ringbuffer_launch/: CMakeLists.txt  package.xml
src/ringbuffer/ringbuffer_launch/launch/: event_driven.launch.py  main_exec.launch.py
src/ringbuffer/ringbuffer_launch/run/: run.md  run.mmd
src/ringbuffer/ringbuffer_lib/: package.xml
src/ringbuffer/ringbuffer_timer/: CMakeLists.txt  package.xml
src/ringbuffer/ringbuffer_timer/include/ringbuffer_timer/: producer_node.hpp
src/ringbuffer/ringbuffer_timer/src/: consumer_node.cpp
src/ringbuffer/solo/consumer_demo/: CMakeLists.txt  package.xml
src/ringbuffer/solo/producer_demo/: CMakeLists.txt
src/ringbuffer/solo/producer_demo/launch/: main_exec.launch.py
src/ringbuffer/srv_trigger/consumer_srv_demo/: CMakeLists.txt
src/ringbuffer/srv_trigger/producer_srv_demo/: CMakeLists.txt  package.xml
src/ringbuffer/srv_trigger/producer_srv_demo/include/producer_srv_demo/: producer_node.hpp
src/ringbuffer/srv_trigger/producer_srv_demo/src/: producer_node.cpp
src/ringbuffer/sub_and_snapshot/: CMakeLists.txt  package.xml  run.md
(+1 files in other folders)
