<?xml version="1.0"?>
<package format="3">
  <name>bringup_launch</name>
  <version>0.0.1</version>
  <description>Launch file to run producer_demo and consumer_demo together</description>
  <maintainer email="chris@example.com">Chris</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>producer_demo</depend>
  <depend>consumer_demo</depend>
  <depend>rclcpp_components</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
