<?xml version="1.0"?>
<package format="3">
  <name>prod_and_coms</name>
  <version>0.0.1</version>
  <description>Producer and Consumer nodes using ringbuffer_lib</description>
  <maintainer email="chris@example.com">Chris</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ringbuffer_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
